--- a/src/components/HomeTab/HomeTab.module.css
+++ b/src/components/HomeTab/HomeTab.module.css
@@ -6,7 +6,8 @@
 
 .sidebar {
   width: 30%;
-  min-width: 300px;
+  min-width: 280px;
+  max-width: 320px;
   display: flex;
   flex-direction: column;
   gap: 30px;
